modules/protocol/http/test/long_header_key-ref.txt
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug conn: opening connection 127.0.0.1:42077 -> 127.0.0.1:80
debug tcp: selecting http dissector on flow
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug grammar: parse error at byte 9021 for field 1 in header: token /[^:[:blank:]]+/ doesn't match
debug grammar: parse error context: ...
alert: id = = <>
	severity = low
	description = invalid http header
debug conn: dropping connection 127.0.0.1:42077 -> 127.0.0.1:80
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp connection for tcp next dissector
debug lua: closing state
debug conn: <cleanup> connection
